--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^3.10.0",
     "react-moment": "^0.9.7",
     "react-multi-carousel": "^2.5.5",
+    "react-parallax-component": "^1.0.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
