--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "animate.css": "^4.1.0",
     "antd": "^4.2.5",
     "aos": "^2.3.4",
+    "array-move": "^2.2.2",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
     "hover.css": "^2.3.2",
@@ -22,12 +23,13 @@
     "react-icons": "^3.10.0",
     "react-moment": "^0.9.7",
     "react-multi-carousel": "^2.5.5",
-    "react-parallax-component": "^1.0.6",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
     "react-scroll-to": "^3.0.0-beta.6",
     "react-slick": "^0.26.1",
+    "react-sortable-hoc": "^1.11.0",
     "react-stickynode": "^3.0.2",
     "reactstrap": "^8.4.1",
     "slick-carousel": "^1.8.1",
